@@ -1,80 +1,122 @@
-/*
- * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
- * Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Servlet.java to edit this template
- */
 package module.bussiness.product;
 
-import entity.ProductEntity;
-import java.io.IOException;
-import java.io.PrintWriter;
-import java.sql.SQLException;
-import java.util.List;
+import entity.ProductReviewEntity;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.annotation.WebServlet;
 import jakarta.servlet.http.HttpServlet;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import jakarta.servlet.http.HttpSession;
+import java.io.IOException;
+import java.io.PrintWriter;
+import java.util.Collections;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import module.bussiness.cart.dto.CartItemView;
 import module.bussiness.product.dto.CreateProduct;
+import module.bussiness.product.dto.ProductCardView;
+import module.bussiness.product.dto.ProductDetailView;
 import module.bussiness.product.dto.UpdateProduct;
 
-/**
- *
- * @author An
- */
 @WebServlet(name = "product", urlPatterns = {"/product"})
 public class ProductController extends HttpServlet {
+
     private final ProductService productService = new ProductService();
 
-    /**
-     * Handles the HTTP <code>GET</code> method.
-     *
-     * @param request servlet request
-     * @param response servlet response
-     * @throws ServletException if a servlet-specific error occurs
-     * @throws IOException if an I/O error occurs
-     */
     @Override
     protected void doGet(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
-        response.setContentType("text/plain;charset = UTF-8");
-        
-        try(PrintWriter out = response.getWriter()){
-            String id  = request.getParameter("id");
-            if(id != null && !id.isBlank()){
-                ProductEntity item = productService.getProductById(id);
-                if(item == null){
-                    response.setStatus(HttpServletResponse.SC_NOT_FOUND);
-                    out.println("Product not found");
-                    return;
-                }
-                out.println("Product: " + item.getUserId() + " | " + item.getName());
+        boolean isAdmin = "1".equals(request.getParameter("admin"));
+        String id = request.getParameter("id");
+
+        if (id != null && !id.trim().isEmpty()) {
+            try {
+                renderProductDetail(request, response, id.trim(), null);
+                return;
+            } catch (Throwable e) {
+                request.setAttribute("error", "Không thể tải chi tiết sản phẩm: " + e.getMessage());
+                request.setAttribute("productCards", Collections.emptyList());
+                request.setAttribute("featuredProducts", Collections.emptyList());
+                request.setAttribute("categories", new LinkedHashSet<>());
+                request.setAttribute("selectedCategory", "");
+                request.setAttribute("isAdmin", isAdmin);
+                request.setAttribute("cartCount", countCartQuantity(request.getSession(false)));
+                request.getRequestDispatcher("/views/product/list.jsp").forward(request, response);
                 return;
             }
-            
-            List<ProductEntity> products = productService.getAllProducts();
-            out.println("Product count: " + products.size());
-            for(ProductEntity p : products){
-                out.println(p.getUserId() + " | "+ p.getName());
-            }
-
-        }catch(SQLException e){
-            response.setStatus(HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
-            response.getWriter().println("Database error: " + e.getMessage());
         }
+
+        String category = request.getParameter("category");
+        List<ProductCardView> productCards;
+        List<ProductCardView> allCards;
+        try {
+            allCards = productService.getProductCards();
+            productCards = productService.getProductCards(category);
+        } catch (Throwable e) {
+            request.setAttribute("error", "Cannot load products: " + e.getMessage());
+            productCards = Collections.emptyList();
+            allCards = Collections.emptyList();
+        }
+
+        Set<String> categories = new LinkedHashSet<>();
+        for (ProductCardView card : allCards) {
+            if (card.getCategory() != null && !card.getCategory().trim().isEmpty()) {
+                categories.add(card.getCategory().trim().toUpperCase());
+            }
+        }
+
+        List<ProductCardView> featuredProducts;
+        try {
+            featuredProducts = productService.getFeaturedProducts(6);
+        } catch (Exception e) {
+            featuredProducts = productCards;
+        }
+
+        request.setAttribute("productCards", productCards);
+        request.setAttribute("featuredProducts", featuredProducts);
+        request.setAttribute("categories", categories);
+        request.setAttribute("selectedCategory", category == null ? "" : category.trim().toUpperCase());
+        request.setAttribute("isAdmin", isAdmin);
+        request.setAttribute("cartCount", countCartQuantity(request.getSession(false)));
+        request.getRequestDispatcher("/views/product/list.jsp").forward(request, response);
     }
 
-    /**
-     * Handles the HTTP <code>POST</code> method.
-     *
-     * @param request servlet request
-     * @param response servlet response
-     * @throws ServletException if a servlet-specific error occurs
-     * @throws IOException if an I/O error occurs
-     */
     @Override
     protected void doPost(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
-        response.setContentType("text/plain;charset=UTF-8");
+        String action = request.getParameter("action");
+        if ("review".equalsIgnoreCase(action)) {
+            String productId = request.getParameter("productId");
+            String reviewerName = request.getParameter("reviewerName");
+            String comment = request.getParameter("comment");
+            int rating = parseIntOrDefault(request.getParameter("rating"), 5);
+            rating = Math.max(1, Math.min(rating, 5));
+            try {
+                if (reviewerName == null || reviewerName.trim().isEmpty()) {
+                    renderProductDetail(request, response, productId, "Vui lòng nhập tên người đánh giá.");
+                    return;
+                }
+                productService.createReview(productId, reviewerName.trim(), rating, comment);
+                response.sendRedirect(request.getContextPath() + "/product?id=" + productId);
+            } catch (Exception e) {
+                try {
+                    renderProductDetail(request, response, productId, "Gửi đánh giá thất bại: " + e.getMessage());
+                } catch (Exception inner) {
+                    throw new ServletException(inner);
+                }
+            }
+            return;
+        }
+
+        boolean isAdmin = "1".equals(request.getParameter("admin"));
+        if (!isAdmin) {
+            response.setStatus(HttpServletResponse.SC_FORBIDDEN);
+            request.setAttribute("error", "Only admin can create products.");
+            doGet(request, response);
+            return;
+        }
 
         CreateProduct dto = new CreateProduct();
         dto.setName(request.getParameter("name"));
@@ -84,26 +126,21 @@ public class ProductController extends HttpServlet {
         dto.setUserId(request.getParameter("userId"));
         dto.setCategory(request.getParameter("category"));
 
-        try(PrintWriter out = response.getWriter()){
-            boolean ok = productService.createProduct(dto);
-            if(!ok){
-                response.setStatus(HttpServletResponse.SC_BAD_REQUEST);
-                out.println("Create product failed");
-                return;
-            }
-            response.setStatus(HttpServletResponse.SC_CREATED);
-            out.println("Create product success");
-        }catch(SQLException e){
-            response.setStatus(HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
-            response.getWriter().println("Database error: " + e.getMessage());
+        try {
+            productService.createProduct(dto);
+            response.sendRedirect(request.getContextPath() + "/product?admin=1");
+        } catch (Exception e) {
+            request.setAttribute("error", "Create product failed: " + e.getMessage());
+            doGet(request, response);
         }
     }
-     @Override
+
+    @Override
     protected void doPut(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
         response.setContentType("text/plain;charset=UTF-8");
-
         String id = request.getParameter("id");
+
         UpdateProduct dto = new UpdateProduct();
         dto.setName(request.getParameter("name"));
         dto.setDescription(request.getParameter("description"));
@@ -115,13 +152,15 @@ public class ProductController extends HttpServlet {
             boolean ok = productService.updateProduct(id, dto);
             if (!ok) {
                 response.setStatus(HttpServletResponse.SC_BAD_REQUEST);
-                out.println("Update product failed");
+                out .println("Update product failed");
                 return;
             }
             out.println("Update product success");
-        } catch (SQLException e) {
+        } catch (RuntimeException e) {
             response.setStatus(HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
-            response.getWriter().println("Database error: " + e.getMessage());
+            Throwable cause = e.getCause();
+            String message = cause != null ? cause.getMessage() : e.getMessage();
+            response.getWriter().println("Database error: " + message);
         }
     }
 
@@ -129,8 +168,8 @@ public class ProductController extends HttpServlet {
     protected void doDelete(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
         response.setContentType("text/plain;charset=UTF-8");
-
         String id = request.getParameter("id");
+
         try (PrintWriter out = response.getWriter()) {
             boolean ok = productService.deleteProduct(id);
             if (!ok) {
@@ -139,21 +178,64 @@ public class ProductController extends HttpServlet {
                 return;
             }
             out.println("Delete product success");
-        } catch (SQLException e) {
+        } catch (RuntimeException e) {
             response.setStatus(HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
-            response.getWriter().println("Database error: " + e.getMessage());
+            Throwable cause = e.getCause();
+            String message = cause != null ? cause.getMessage() : e.getMessage();
+            response.getWriter().println("Database error: " + message);
         }
     }
-    
 
-    /**
-     * Returns a short description of the servlet.
-     *
-     * @return a String containing servlet description
-     */
     @Override
     public String getServletInfo() {
         return "Short description";
     }
 
+    @SuppressWarnings("unchecked")
+    private int countCartQuantity(HttpSession session) {
+        if (session == null) {
+            return 0;
+        }
+        Object raw = session.getAttribute("cartItems");
+        if (!(raw instanceof Map)) {
+            return 0;
+        }
+        int count = 0;
+        Map<String, CartItemView> items = (Map<String, CartItemView>) raw;
+        for (CartItemView item : items.values()) {
+            count += item.getQuantity();
+        }
+        return count;
+    }
+
+    private void renderProductDetail(HttpServletRequest request, HttpServletResponse response, String productId, String reviewError)
+            throws Exception {
+        ProductDetailView detail = productService.getProductDetail(productId);
+        if (detail == null) {
+            response.setStatus(HttpServletResponse.SC_NOT_FOUND);
+            request.setAttribute("error", "Không tìm thấy sản phẩm.");
+            request.getRequestDispatcher("/views/product/list.jsp").forward(request, response);
+            return;
+        }
+
+        List<String> galleryImages = productService.getGalleryImages(productId);
+        List<ProductCardView> relatedProducts = productService.getRelatedProducts(productId, detail.getCategory(), 10);
+        List<ProductReviewEntity> reviews = productService.getProductReviews(productId);
+
+        request.setAttribute("productDetail", detail);
+        request.setAttribute("galleryImages", galleryImages);
+        request.setAttribute("relatedProducts", relatedProducts);
+        request.setAttribute("reviews", reviews);
+        request.setAttribute("reviewError", reviewError);
+        request.setAttribute("cartCount", countCartQuantity(request.getSession(false)));
+        request.getRequestDispatcher("/views/product/detail.jsp").forward(request, response);
+    }
+
+    private int parseIntOrDefault(String raw, int fallback) {
+        try {
+            return Integer.parseInt(raw);
+        } catch (Exception e) {
+            return fallback;
+        }
+    }
 }
